Added Js  popup menu

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
 .material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }
 
 
+
 /* UTILITIES */
 .page-container {
     display: flex;
@@ -40,7 +41,6 @@
     font-size: 1.3rem;
     align-items: center;
     align-content: center;
-    /* border: solid 1px black; */
 
 }
 
@@ -49,17 +49,13 @@
     align-items: center;
     width: 50%;
     text-align: left;
-    /* border: solid 1px black; */
-
 }
 .nav-right {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     width: 50%;
-    text-align: right;
-    /* border: solid 1px black; */
-    
+    text-align: right;  
 }
 
 nav div a{
@@ -84,16 +80,60 @@ a:hover{
 }
 
 .sign-in:hover {
-    border: solid .5px #c9c7c7; 
+    box-shadow: 1px -1px 5px silver;
     cursor: pointer;
 }
+
+
 
 /* POP UP MENU */
 
 #menu {
-    padding-top: 0rem;
+    padding: .5rem;
 }
 
+#menu:hover {
+    background-color: #eee;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.popup-menu {
+    position: absolute;
+    top: 60px;
+    right: 20px;
+    width: 190px;
+
+    background-color: #fff;
+    border: 1px solid #c0c0c0;
+    flex-wrap: wrap;
+    align-content: space-around;
+    justify-content: center;
+    box-shadow: 1px -1px 5px silver;
+    z-index: 99;
+    border-radius: 5px;
+}
+
+.material-icons.md-dark {
+    font-size: 4rem;
+}
+
+.popup-menu a {
+    text-decoration: none;
+    color: #3b3b3b;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 90px;
+    height: 90px;
+    padding: 10px;
+}
+
+.popup-menu a:hover {
+    background-color: #eee;
+    cursor: pointer;
+}
 
 
 /* MAIN SEARCH AREA */
@@ -143,7 +183,6 @@ a:hover{
     padding-left: 10px;
     border: none;
     outline: none;
-
 
 }
 
